# artifactory-uploader

./: .gitignore  CHANGELOG.md  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yml
src/artifactory_uploader/: cli.py  uploader.py
tests/: test_cli.py  test_uploader.py
