[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "artifactory-uploader"
version = "0.1.0"
description = "Recursively upload a local directory tree to Artifactory"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
    "ggshield",
    "pip-audit",
]

[project.scripts]
artifactory-uploader = "artifactory_uploader.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=80"

[tool.black]
line-length = 99
target-version = ["py312"]
